SERVER-27246 fix atomic applyOps with nonexistent dbs

(cherry picked from commit 0b9be138fb58ea4ef2ca77ddebf53b6c76238a13)